ecmascript/parser/tests/typescript-errors/tsc/es6/destructuring/restElementWithInitializer1/input.ts.stderr
error[1186]: A rest element cannot have an initializer
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/restElementWithInitializer1/input.ts:2:11
  |
2 | var [...x = a] = a;  // Error, rest element cannot have initializer
  |           ^

